--- a/.github/workflows/vmess-daily.yml
+++ b/.github/workflows/vmess-daily.yml
@@ -3,15 +3,15 @@ name: auto crawler
 # 触发条件
 on:
   # push的时候触发
-  # push:
-  #   branches: main
+  push:
+    branches: main
   workflow_dispatch:
   # 定时触发
-  #schedule:
-    # - cron: '*/5 * * * *'
+  schedule:
+     - cron: '*/5 * * * *'
     # 表达式生成  https://crontab.guru/
     # 此处是UTC时间 即北京时间 -8小时
-    # - cron: '40 2,12 * * *'
+     - cron: '40 2,12 * * *'
 
 jobs:
   deploy:
